--- a/examples/gateway_editor_v1/imgui_layout.ini
+++ b/examples/gateway_editor_v1/imgui_layout.ini
@@ -4,10 +4,10 @@ Size=239,574
 Collapsed=0
 
 [Window][Debug Panel (F1 to Toggle)]
-Pos=1007,19
-Size=273,701
+Pos=1040,19
+Size=240,701
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000003,1
 
 [Window][DockSpace Window]
 Pos=0,19
@@ -20,8 +20,40 @@ Size=273,701
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Outliner]
+Pos=1040,19
+Size=240,701
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Outliner2]
+Pos=0,19
+Size=259,701
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Codex Of Forms]
+Pos=0,19
+Size=244,701
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Texture Swatches]
+Pos=1130,19
+Size=150,701
+Collapsed=0
+DockId=0x0000000B,0
+
 [Docking][Data]
-DockSpace   ID=0xE098E157 Window=0xD0A6EEBB Pos=0,19 Size=1280,701 Split=X
-  DockNode  ID=0x00000004 Parent=0xE098E157 SizeRef=749,701 CentralNode=1
-  DockNode  ID=0x00000005 Parent=0xE098E157 SizeRef=273,701 Selected=0x6976C762
+DockSpace           ID=0xE098E157 Window=0xD0A6EEBB Pos=0,19 Size=1280,701 Split=X
+  DockNode          ID=0x00000006 Parent=0xE098E157 SizeRef=1128,701 Split=X
+    DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=244,701 Selected=0x1B818471
+    DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=882,701 Split=X
+      DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=259,701 Selected=0x20EA63BD
+      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1019,701 Split=X
+        DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=1038,701 Split=X
+          DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=749,701 CentralNode=1
+          DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=273,701 Selected=0xB49ADA91
+        DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=240,701 Selected=0x66BFF854
+  DockNode          ID=0x0000000B Parent=0xE098E157 SizeRef=150,701 Selected=0x08856D32
 
