Added wedges in all positions

--- a/examples/gateway_editor_v1/imgui_layout.ini
+++ b/examples/gateway_editor_v1/imgui_layout.ini
@@ -39,8 +39,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Texture Swatches]
-Pos=1215,19
-Size=65,701
+Pos=942,19
+Size=338,701
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -56,16 +56,21 @@ Size=243,701
 Collapsed=0
 DockId=0x00000008,1
 
+[Window][Wedge Rotation Position]
+Pos=60,60
+Size=185,192
+Collapsed=0
+
 [Docking][Data]
 DockSpace           ID=0xE098E157 Window=0xD0A6EEBB Pos=0,19 Size=1280,701 Split=X
   DockNode          ID=0x00000008 Parent=0xE098E157 SizeRef=243,701 Selected=0x1B818471
   DockNode          ID=0x0000000C Parent=0xE098E157 SizeRef=1035,701 Split=X
-    DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=968,701 Split=X
+    DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=695,701 Split=X
       DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=259,701 Selected=0x20EA63BD
       DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1019,701 Split=X
         DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=1038,701 Split=X
           DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=749,701 CentralNode=1
           DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=273,701 Selected=0xB49ADA91
         DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=240,701 Selected=0x66BFF854
-    DockNode        ID=0x0000000B Parent=0x0000000C SizeRef=65,701 Selected=0x08856D32
+    DockNode        ID=0x0000000B Parent=0x0000000C SizeRef=338,701 Selected=0x08856D32
 
