Add point lights and multiple point light support

--- a/examples/gateway_editor_v1/imgui_layout.ini
+++ b/examples/gateway_editor_v1/imgui_layout.ini
@@ -1,98 +1,59 @@
-[Window][Debug##Default]
-Pos=416,121
-Size=239,574
-Collapsed=0
-
-[Window][Debug Panel (F1 to Toggle)]
-Pos=1040,19
-Size=240,701
-Collapsed=0
-DockId=0x00000003,1
-
 [Window][DockSpace Window]
 Pos=0,61
 Size=1280,659
 Collapsed=0
 
-[Window][Test Window]
-Pos=1007,19
-Size=273,701
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
 Collapsed=0
-DockId=0x00000005,0
-
-[Window][Outliner]
-Pos=1040,19
-Size=240,701
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Outliner2]
-Pos=0,19
-Size=259,701
-Collapsed=0
-DockId=0x00000002,0
 
 [Window][Codex Of Forms]
 Pos=0,61
-Size=257,659
+Size=469,659
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000003,1
 
 [Window][Texture Swatches]
-Pos=709,61
-Size=254,659
+Pos=0,61
+Size=469,659
 Collapsed=0
-DockId=0x0000000B,0
-
-[Window][Rotation Control]
-Pos=0,19
-Size=327,701
-Collapsed=0
-DockId=0x0000000E,1
-
-[Window][Transform Control]
-Pos=130,157
-Size=216,563
-Collapsed=0
-
-[Window][Wedge Rotation Position]
-Pos=0,19
-Size=120,701
-Collapsed=0
-DockId=0x0000000E,2
+DockId=0x00000003,0
 
 [Window][Material Textures]
 Pos=0,61
-Size=257,659
+Size=469,659
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000003,2
 
 [Window][UV Editor]
-Pos=965,61
-Size=181,659
+Pos=1114,61
+Size=166,659
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000002,1
 
 [Window][Performance Info]
-Pos=1148,61
-Size=132,659
+Pos=1114,61
+Size=166,659
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x00000002,0
+
+[Window][Transform Control]
+Pos=0,61
+Size=469,659
+Collapsed=0
+DockId=0x00000003,3
+
+[Window][Wedge Rotation Position]
+Pos=0,61
+Size=469,659
+Collapsed=0
+DockId=0x00000003,3
 
 [Docking][Data]
-DockSpace               ID=0xE098E157 Window=0xD0A6EEBB Pos=0,61 Size=1280,659 Split=X
-  DockNode              ID=0x00000008 Parent=0xE098E157 SizeRef=257,676 Selected=0xCD4DC7BE
-  DockNode              ID=0x00000009 Parent=0xE098E157 SizeRef=1021,676 Split=X
-    DockNode            ID=0x0000000D Parent=0x00000009 SizeRef=887,676 Split=X
-      DockNode          ID=0x0000000E Parent=0x0000000D SizeRef=704,701 Split=X
-        DockNode        ID=0x00000006 Parent=0x0000000E SizeRef=448,701 Split=X
-          DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=259,701 Selected=0x20EA63BD
-          DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1019,701 Split=X
-            DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=1038,701 Split=X
-              DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=749,701 CentralNode=1 Selected=0x1DD21A44
-              DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=273,701 Selected=0xB49ADA91
-            DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=240,701 Selected=0x66BFF854
-        DockNode        ID=0x0000000B Parent=0x0000000E SizeRef=254,701 Selected=0x08856D32
-      DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=181,701 Selected=0x1DD21A44
-    DockNode            ID=0x00000010 Parent=0x00000009 SizeRef=132,676 Selected=0x3FC1A724
+DockSpace     ID=0xE098E157 Window=0xD0A6EEBB Pos=0,61 Size=1280,659 Split=X
+  DockNode    ID=0x00000003 Parent=0xE098E157 SizeRef=469,659 Selected=0x4211C45D
+  DockNode    ID=0x00000004 Parent=0xE098E157 SizeRef=809,659 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=641,659 CentralNode=1
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=166,659 Selected=0x3FC1A724
 
